# fast-api-with-open-interpreter

./: .gitignore  Dockerfile  README.md  c36c37d7-a189-492b-a37a-cc8751ba7eca_input.xlsx  pyproject.toml  renovate.json  requirements.txt
history/conversations/: instruction_conversation.json
src/: main.py
src/config/: logger.py  tool_version_config.py
src/domain/model/: filename.py  user.py
src/repository/: interpreter_client.py  sge_interpreter_client.py  user_repository.py
src/routers/: download_router.py  health_router.py  interpreter_router.py  sge_router.py  stable_chat_router.py
